--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "rabbitmq": "node test/broker/rabbitmq/server.js"
+    "rabbitmq": "node test/broker/rabbitmq/server.js",
+    "activemq": "node test/broker/activemq/server.js"
   },
   "author": "Graham Daws",
   "license": "MIT",
