--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^12.12.31",
     "dotenv": "^8.2.0",
     "jest": "^25.2.4",
+    "mock-socket": "^9.0.3",
     "ts-node": "^8.9.1",
     "typedoc": "^0.17.4",
     "typescript": "^3.8.3"
