--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
+    "prepublish": "tsc",
     "build": "tsc",
     "test": "tsc --noEmit && jest --coverage",
     "rabbitmq": "node test/broker/rabbitmq/server.js",
