--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,10 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "esModuleInterop": true,
-    "target": "es6",
-    "strict": true,
+    "lib": ["es2019"],
     "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist",
-    "allowJs": true
-  },
-  "lib": ["es2015"],
-  "include": [
-    "src",
-    "test"
-  ]
+    "strict": true,
+    "target": "es2019",
+    "module": "commonjs",
+    "noEmit": true
+  }
 }
