--- a/packages/stompit2-node/package.json
+++ b/packages/stompit2-node/package.json
@@ -5,7 +5,7 @@
   "author": "Graham Daws",
   "license": "MIT",
   "homepage": "https://github.com/gdaws/stompit2",
-  "module": "dist/packages/stompit2-node/index.js",
+  "main": "dist/packages/stompit2-node/index.js",
   "engines": {
     "node": ">=12.16.1"
   },
