--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:stompit2-web": "tsc --project packages/stompit2-web",
     "test": "tsc --noEmit && jest --coverage",
     "rabbitmq": "node test/broker/rabbitmq/server.js",
-    "activemq": "node test/broker/activemq/server.js",
-    "publish": "lerna publish"
+    "activemq": "node test/broker/activemq/server.js"
   },
   "engines": {
     "node": ">=12.16.1"
@@ -24,7 +23,6 @@
     "@types/node": "^12.12.54",
     "dotenv": "^8.2.0",
     "jest": "^26.3.0",
-    "lerna": "^3.22.1",
     "mock-socket": "^9.0.3",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.8",
