--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
+    "@tsconfig/node14": "^1.0.1",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.12.54",
     "dotenv": "^8.2.0",
