--- a/packages/stompit2-node/tsconfig.json
+++ b/packages/stompit2-node/tsconfig.json
@@ -1,13 +1,7 @@
 {
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
-    "lib": ["dom", "es2019"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
     "allowJs": true,
-    "target": "es2019",
-    "module": "commonjs",
-    "sourceMap": true,
     "declaration": true,
     "outDir": "dist"
   },
