--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ node_js:
    - "14"
    - "13"
    - "12"
+services:
+  - docker
+before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 install:
   - npm install
   - npm install codecov -g
