--- a/packages/stompit2-node/package.json
+++ b/packages/stompit2-node/package.json
@@ -2,6 +2,7 @@
   "name": "stompit2-node",
   "version": "0.14.1",
   "description": "STOMP client library",
+  "keywords": ["stomp", "queue", "rabbitmq", "activemq"],
   "author": "Graham Daws",
   "license": "MIT",
   "homepage": "https://github.com/gdaws/stompit2",
