--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "tsc --noEmit && jest --coverage",
     "rabbitmq": "node test/broker/rabbitmq/server.js",
-    "activemq": "node test/broker/activemq/server.js"
+    "activemq": "node test/broker/activemq/server.js",
+    "preversion": "npm test"
   },
   "engines": {
     "node": ">=12.16.1"
