--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm install
-          npx typedoc --out docs/${GITHUB_REF##*/}
+          npx typedoc --out docs
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
@@ -26,4 +26,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: docs/${GITHUB_REF##*/} # The folder the action should deploy.
+          FOLDER: docs # The folder the action should deploy.
+          TARGET_FOLDER: ${GITHUB_REF##*/}
