--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Graham Daws",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint src --quiet",
     "test": "tsc --noEmit && jest --coverage",
     "rabbitmq": "node test/broker/rabbitmq/server.js",
     "activemq": "node test/broker/activemq/server.js",
@@ -20,9 +21,14 @@
     "@tsconfig/node14": "^1.0.1",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.12.54",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^26.3.0",
     "mock-socket": "^9.0.3",
+    "prettier": "^2.5.1",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.8",
     "typescript": "^4.0.2"
